--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -126,6 +126,15 @@
                     android:layout_marginTop="@dimen/side_margin"
                     android:text="@{@string/total_price(viewModel.price)}" />
 
+                <Button
+                    android:id="@+id/cancel_button"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_between_elements"
+                    android:onClick="@{() -> summaryFragment.cancelOrder()}"
+                    android:text="@string/cancel" />
+
             </LinearLayout>
 
             <Button
